--- a/content/post/MS/LC50.Rmd
+++ b/content/post/MS/LC50.Rmd
@@ -2,6 +2,7 @@
 title: "Comparando a maturidade sexual morfológica"
 author: "Gabriel F. B. Rodrigues"
 date: "7 de agosto de 2020"
+lastmod: '2020-08-07T17:30:21-03:00'
 output: html_document
 bibliography: wenner1974.bib
 tags:
